Add barra de pesquisa na toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Marvel</string>
+    <string name="app_name_upper">MARVEL</string>
+    <string name="searcch">Procurar</string>
 </resources>
